modified:   README.md 	modified:   content.js 	new file:   font_size.js 	new file:   magnifier.js 	modified:   manifest.json 	modified:   popup.html 	modified:   styles.css

--- a/manifest.json
+++ b/manifest.json
@@ -19,12 +19,9 @@
     },
     "content_scripts":[
         {
-            "js": [
-                "content.js"
-            ],
-            "matches": [
-                "<all_urls>"
-            ]
+            "js": ["content.js"],
+            "css": ["styles.css"],
+            "matches": ["<all_urls>"]
         }
     ],
     "permissions": [
