--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     },
     "content_scripts":[
         {
-            "js": ["content.js"],
+            "js": ["content.js", "popup.js"],
             "css": ["styles.css"],
             "matches": ["<all_urls>"]
         }
@@ -27,6 +27,8 @@
     "permissions": [
         "storage",
         "activeTab",
-        "scripting"
+        "scripting",
+        "tabs",
+        "*://*/*"
     ]
 }
