--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "SoundSend",
+    "name": "EyeDaptify",
     "description": "Add functionalities that will help visually impaired users",
     "version": "1.0.1",
     "icons":{
